@@ -1,3 +1,13 @@
+* Applied a modified version of Steven Haryanto's commit
+ac6ace8bf09fabba4e6ea3b2826ff13cd30507bc :
+    - When writing config with fallback section, also omit the fallback 
+    section header, like the original file. Also, change
+    t/19param-found-outside-section.t a bit to not require IO::Scalar and use 
+    File::Temp instead (we are testing WriteConfig anyway).
+    - Shlomi Fish fixed unless'es to if's and converted a do { ... } if call to
+    a block conditional, as well as made the open statements on t/19param
+    more secure.
+
 Version 2.61:    ( Sun Nov 14 10:52:39 IST 2010 )
 -------------------------------------------------
 
